Tweaks to map tooltip javascript

--- a/wp-content/themes/safedescents/resources/assets/styles/components/_addskier.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_addskier.scss
@@ -19,8 +19,12 @@
       position: absolute;
       font-family: sans-serif;
       top: 0;
-      right: 10px;
+      right: 0;
       cursor: pointer;
+      width: 30px;
+      height: 30px;
+      line-height: 30px;
+      text-align: center;
     }
 
     h5 {
