--- a/wp-content/themes/safedescents/resources/assets/styles/components/_banner.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_banner.scss
@@ -5,4 +5,11 @@
   font-weight: $font-weight-regular;
   padding: 20px;
   text-align: center;
+
+  span {
+    font-family: $primary-font;
+    display: block;
+    font-size: 0.6em;
+    margin-top: 0.5em;
+  }
 }
