Fixing the google api data to return all zips

--- a/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
@@ -104,6 +104,10 @@
       content: none;
     }
 
+    .close {
+      display: none;
+    }
+
     p {
       line-height: 1.3em;
 
@@ -111,7 +115,7 @@
         background: $color-dark-blue;
         color: $color-white;
         margin: 0;
-        padding: 1em;
+        padding: 0.5em;
         cursor: pointer;
         text-align: center;
       }
