--- a/wp-content/themes/safedescents/resources/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_buttons.scss
@@ -27,8 +27,7 @@
   width: auto;
 
   &:hover {
-    border-color: $color-white;
     color: $color-white;
-    background: transparent;
+    background: $color-black;
   }
 }
