Hook up checkout to Stripe (works 95%)

--- a/wp-content/themes/safedescents/resources/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_buttons.scss
@@ -17,6 +17,13 @@
     background: $color-white;
     color: $color-black;
   }
+
+  &.disabled {
+    background: $color-light-grey;
+    color: $color-medium-grey;
+    border-color: $color-medium-grey;
+    cursor: default;
+  }
 }
 
 .btn-alt {
