--- a/wp-content/themes/safedescents/resources/assets/styles/layouts/_footer.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/layouts/_footer.scss
@@ -19,18 +19,15 @@ footer {
   }
 }
 
-#menu-footer-nav {
-  list-style-type: none;
-  column-count: 2;
+.footer-menu {
+  display: flex;
 
   li {
-    width: auto;
+    list-style-type: none;
 
     a {
       color: $color-white;
       text-decoration: none;
-      font-family: $primary-font;
-      font-weight: $font-weight-light;
     }
   }
 }
