--- a/wp-content/themes/safedescents/resources/assets/styles/pages/_buynow.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/pages/_buynow.scss
@@ -1,17 +1,36 @@
+// .sticky-cart {
+//   box-shadow: -5px 0 10px $color-light-grey;
+//   width: 100%;
+//   padding: 0;
+//
+//   [id="sticky-cart"] {
+//     padding: 1rem 1rem 0;
+//
+//     &.fixed {
+//       width: calc(25% - 2rem);
+//       position: fixed;
+//       top: 0;
+//       right: 0;
+//     }
+//   }
+// }
+
 .sticky-cart {
-  box-shadow: -5px 0 10px $color-light-grey;
-  width: 100%;
-  padding: 0;
+  background: $color-slate;
+  color: $color-white;
+  text-align: center;
 
-  [id="sticky-cart"] {
-    padding: 1rem 1rem 0;
+  dt {
+    @extend h5;
 
-    &.fixed {
-      width: calc(25% - 2rem);
-      position: fixed;
-      top: 0;
-      right: 0;
-    }
+    margin-top: 1em;
+    padding: 5px;
+    background: $color-dark-slate;
+  }
+
+  dd {
+    margin: 0;
+    padding: 10px;
   }
 }
 
@@ -133,8 +152,61 @@ div.help {
   font-size: 11px;
 }
 
-#buynowform {
+.buynowform {
   .row {
     padding: 1em 0;
   }
+
+  abbr[title] {
+    text-decoration: none;
+    font-size: 10px;
+    position: relative;
+    bottom: 5px;
+  }
+
+  input:not([type='checkbox']), textarea, select {
+    background-color: white !important;
+    border: 1px solid $color-medium-grey;
+    display: block;
+    margin: 10px 0 20px 0;
+    width: 100%;
+    padding: 10px;
+    font-size: 13px;
+    box-sizing: border-box;
+
+    &:focus {
+      outline: none;
+      border-bottom: 3px solid $color-sky-blue;
+    }
+  }
+
+  select {
+    height: 38px !important;
+    -webkit-border-radius: 0;
+    border: 0;
+    outline: 1px solid $color-medium-grey !important;
+    outline-offset: -1px;
+  }
+
+  input[type='checkbox'] {
+    margin-right: 10px;
+  }
+}
+
+.billing-address-same {
+  display: none;
+}
+
+.confirmation {
+  display: inline;
+  color: $color-black;
+}
+
+.valid {
+  border-bottom: 3px solid $color-sky-blue !important;
+}
+
+input[aria-invalid='true'] {
+  border-bottom: 3px solid #EA0606 !important;
+  margin-bottom: 5px !important;
 }
