Refactoring buy now page and checkout process

--- a/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
@@ -130,3 +130,16 @@
     }
   }
 }
+
+// Claims
+.claims-sections article {
+  margin: 0;
+}
+
+button, input, optgroup, select, textarea {
+  font-size: auto;
+}
+
+.wrapper {
+  margin: 0 1em;
+}
