--- a/wp-content/themes/safedescents/resources/assets/styles/common/_global.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_global.scss
@@ -41,3 +41,14 @@ img {
 .col-sm-12 {
   width: 100%;
 }
+
+abbr[title] {
+  text-decoration: none;
+  font-size: 10px;
+  position: relative;
+  bottom: 5px;
+}
+
+.post-template-default article {
+  margin-top: 2em;
+}
