--- a/wp-content/themes/safedescents/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/layouts/_header.scss
@@ -3,6 +3,7 @@ header {
   background-size: cover;
   height: 400px;
   text-align: center;
+  background-position: center;
 
   .site-header {
     padding-top: 20px;
