--- a/wp-content/themes/safedescents/resources/assets/styles/pages/_buynow.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/pages/_buynow.scss
@@ -19,6 +19,11 @@
   background: $color-slate;
   color: $color-white;
   text-align: center;
+  padding-top: 105px;
+
+  h3 {
+    font-size: 30px;
+  }
 
   dt {
     @extend h5;
@@ -132,7 +137,6 @@ ol.form-progress {
     }
 
     &[data-step-complete] {
-      cursor: pointer;
       color: $color-sky-blue;
 
       &::before, &::after {
@@ -147,21 +151,9 @@ ol.form-progress {
   }
 }
 
-div.help {
-  color: #EA0606;
-  font-size: 11px;
-}
-
 .buynowform {
   .row {
     padding: 1em 0;
-  }
-
-  abbr[title] {
-    text-decoration: none;
-    font-size: 10px;
-    position: relative;
-    bottom: 5px;
   }
 
   input:not([type='checkbox']), textarea, select {
@@ -191,6 +183,15 @@ div.help {
   input[type='checkbox'] {
     margin-right: 10px;
   }
+
+  .buttons {
+    display: flex;
+    justify-content: center;
+
+    .btn {
+      margin: 1em 1em 3em 1em;
+    }
+  }
 }
 
 .billing-address-same {
@@ -208,5 +209,11 @@ div.help {
 
 input[aria-invalid='true'] {
   border-bottom: 3px solid #EA0606 !important;
-  margin-bottom: 5px !important;
+}
+
+div.help {
+  color: #EA0606;
+  font-size: 10px;
+  position: relative;
+  bottom: 16px;
 }
