--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -22,4 +22,5 @@
 @import "pages/homepage";
 @import "pages/buynow";
 @import "pages/claims";
+@import "pages/otherpages";
 @import "common/mediaqueries";
