--- a/wp-content/themes/safedescents/resources/assets/styles/components/_tooltip.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_tooltip.scss
@@ -11,13 +11,23 @@
   &::after {
     content: '';
     position: absolute;
+    // left: 50%;
+    // top: 100%;
+    // width: 0;
+    // height: 0;
+    // border-left: 20px solid transparent;
+    // border-right: 20px solid transparent;
+    // border-top: 20px solid $color-white;
+    // clear: both;
+    // transform: translate3d(-50%, 0, 0);
+
     left: 50%;
-    top: 100%;
+    bottom: 100%;
     width: 0;
     height: 0;
     border-left: 20px solid transparent;
     border-right: 20px solid transparent;
-    border-top: 20px solid $color-white;
+    border-bottom: 20px solid $color-white;
     clear: both;
     transform: translate3d(-50%, 0, 0);
   }
