--- a/wp-content/themes/safedescents/resources/assets/styles/layouts/_footer.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/layouts/_footer.scss
@@ -7,6 +7,7 @@ footer {
   }
 
   .footer-img {
+    width: 100%;
     display: block;
     height: 350px;
     object-fit: cover;
@@ -14,6 +15,7 @@ footer {
   }
 
   .footer-copyright {
+    font-size: 10px;
     padding: 10px;
     background: $color-white;
   }
