Fix buy now drawer and pull API

--- a/wp-content/themes/safedescents/resources/assets/styles/components/_buy-now-drawer.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_buy-now-drawer.scss
@@ -78,21 +78,21 @@
     display: flex;
     justify-content: space-around;
 
-    .avail {
-      width: 50%;
+    .variation {
+      display: none;
       background: $color-white;
       color: $color-black;
       margin: 0 20px;
       padding: 10px;
     }
 
+    .avail {
+      width: 50%;
+      display: block;
+    }
+
     .not-avail {
       width: 90%;
-      background: $color-white;
-      color: $color-black;
-      margin: 0 20px;
-      padding: 10px;
-      display: none;
     }
   }
 
