--- a/wp-content/themes/safedescents/resources/assets/styles/components/_buy-now-drawer.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_buy-now-drawer.scss
@@ -84,6 +84,7 @@
       color: $color-black;
       margin: 0 20px;
       padding: 10px;
+      box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
     }
 
     .not-avail {
@@ -93,6 +94,7 @@
       margin: 0 20px;
       padding: 10px;
       display: none;
+      box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
     }
   }
 
