Home page and footer style modifications. Sticky header.

--- a/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
@@ -7,32 +7,27 @@
   .callout .callout-text {
     width: auto;
     left: 20px;
-    margin-left: 10px;
-  }
-
-  .services {
-    article {
-      height: 400px;
-    }
+    margin: 0;
   }
 
   .products {
-    height: 700px;
-
     .products-container {
       width: auto;
-      margin-right: 0;
+      margin: 40px 20px;
     }
   }
 
   .latestposts {
+    padding: 0 20px;
+
     article {
-      img {
-        display: none;
-      }
+      margin-bottom: 2em;
 
       &:nth-of-type(-n+2) {
-        border-color: transparent;
+        border-right: none;
+        border-bottom: 1px solid $color-slate;
+        padding-bottom: 1em;
+        margin-bottom: 1em;
       }
     }
   }
