--- a/wp-content/themes/safedescents/resources/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_buttons.scss
@@ -21,9 +21,9 @@
   }
 
   &.disabled {
-    background: $color-light-grey;
+    background: $color-medium-grey;
     color: #CCC;
-    border-color: $color-light-grey;
+    border-color: $color-medium-grey;
     cursor: default;
   }
 }
