--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -2,6 +2,7 @@
 @import "~flexboxgrid/css/flexboxgrid.min";
 @import "~flatpickr/dist/flatpickr.css";
 @import "~normalize.css/normalize.css";
+@import "~tingle.js/dist/tingle.css";
 @import "common/variables";
 @import "common/global";
 @import "common/typography";
