--- a/wp-content/themes/safedescents/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_variables.scss
@@ -71,3 +71,12 @@ $spacer: 2rem;
   background-image: -ms-linear-gradient(180deg, $color-white-trans 30%, $color-white 80%);
   background-image: linear-gradient(180deg, $color-white-trans 30%, $color-white 80%);
 }
+
+@mixin trans-grey-gradient-down {
+  @include filter-gradient(rgba($color-dark-blue, 0), rgba($color-dark-blue, 0.5), vertical);
+
+  background-image: -o-linear-gradient(0deg, rgba($color-dark-blue, 0) 60%, rgba($color-dark-blue, 0.5) 90%);
+  background-image: -moz-linear-gradient(0deg, rgba($color-dark-blue, 0) 60%, rgba($color-dark-blue, 0.5) 90%);
+  background-image: -ms-linear-gradient(0deg, rgba($color-dark-blue, 0) 60%, rgba($color-dark-blue, 0.5) 90%);
+  background-image: linear-gradient(0deg, rgba($color-dark-blue, 0) 60%, rgba($color-dark-blue, 0.5) 90%);
+}
