--- a/wp-content/themes/safedescents/resources/assets/styles/components/_buy-now-drawer.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_buy-now-drawer.scss
@@ -87,6 +87,23 @@
       box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
     }
 
+    .state-name {
+      display: none;
+    }
+
+    .duration {
+      margin-top: 1em;
+      font-family: "Montserrat", sans-serif;
+      text-transform: uppercase;
+      font-size: 20px;
+    }
+
+    .price {
+      font-family: "Montserrat", sans-serif;
+      font-weight: 500;
+      font-size: 40px;
+    }
+
     .avail {
       width: 50%;
       display: block;
