--- a/wp-content/themes/safedescents/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/layouts/_header.scss
@@ -4,6 +4,18 @@ header {
   height: 300px;
   text-align: center;
   background-position: center;
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    @include trans-grey-gradient-down;
+  }
 
   .site-header {
     padding: 10px 0;
@@ -25,17 +37,18 @@ header {
       align-items: center;
     }
   }
+
+  h1 {
+    margin: 0 auto;
+    top: 50%;
+    position: relative;
+  }
 }
 
 // Global Site Logo
 .custom-logo {
   width: 100px;
   height: auto;
-}
-
-// Non Front Page Header
-.page-header {
-  height: 300px;
 }
 
 // Front Page Header
@@ -58,10 +71,6 @@ header {
 
   h1 {
     width: 50%;
-    margin: 0 auto;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
   }
 
   .banner {
