--- a/wp-content/themes/safedescents/resources/assets/styles/pages/_buynow.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/pages/_buynow.scss
@@ -1,25 +1,7 @@
-// .sticky-cart {
-//   box-shadow: -5px 0 10px $color-light-grey;
-//   width: 100%;
-//   padding: 0;
-//
-//   [id="sticky-cart"] {
-//     padding: 1rem 1rem 0;
-//
-//     &.fixed {
-//       width: calc(25% - 2rem);
-//       position: fixed;
-//       top: 0;
-//       right: 0;
-//     }
-//   }
-// }
-
 .sticky-cart {
   background: $color-slate;
   color: $color-white;
   text-align: center;
-  padding-top: 105px;
 
   h3 {
     font-size: 30px;
@@ -47,15 +29,18 @@
 .form-section {
   position: relative;
   margin-bottom: 20px;
-  border: 1px solid $color-dark-slate;
+  border: none;
+  box-shadow: 0 0 10px lighten($color-medium-grey, 20%);
 
   & > legend {
     font-family: $primary-font;
     font-weight: $font-weight-medium;
     font-size: $font-size-medium;
     text-transform: uppercase;
-    color: $color-sky-blue;
+    color: $color-dark-slate;
     text-align: center;
+    background: $color-white;
+    padding: 0 10px;
   }
 }
 
@@ -137,7 +122,7 @@ ol.form-progress {
     }
 
     &[data-step-complete] {
-      color: $color-sky-blue;
+      color: $color-dark-slate;
 
       &::before, &::after {
         background: $color-sky-blue;
@@ -156,9 +141,27 @@ ol.form-progress {
     padding: 1em 0;
   }
 
+  label {
+    font-family: $primary-font;
+    font-weight: 500;
+    font-size: 18px;
+    display: block;
+    color: $color-black;
+
+    &.smaller-text {
+      font-weight: 400;
+      font-size: 0.9em;
+    }
+  }
+
+  p {
+    margin: 0 0 1em;
+    font-size: 0.9em;
+  }
+
   input:not([type='checkbox']), textarea, select {
     background-color: white !important;
-    border: 1px solid $color-medium-grey;
+    border: 1px solid lighten($color-medium-grey, 20%);
     display: block;
     margin: 10px 0 20px 0;
     width: 100%;
@@ -182,6 +185,7 @@ ol.form-progress {
 
   input[type='checkbox'] {
     margin-right: 10px;
+    float: left;
   }
 
   .buttons {
@@ -192,15 +196,14 @@ ol.form-progress {
       margin: 1em 1em 3em 1em;
     }
   }
+
+  input#confirmation + .help {
+    display: none !important;
+  }
 }
 
 .billing-address-same {
   display: none;
-}
-
-.confirmation {
-  display: inline;
-  color: $color-black;
 }
 
 .valid {
@@ -208,12 +211,27 @@ ol.form-progress {
 }
 
 input[aria-invalid='true'] {
-  border-bottom: 3px solid #EA0606 !important;
+  border-bottom: 3px solid $color-error !important;
 }
 
 div.help {
-  color: #EA0606;
+  color: $color-error;
   font-size: 10px;
   position: relative;
   bottom: 16px;
+}
+
+.tingle-modal-box {
+  h4 {
+    margin: 0;
+  }
+
+  p, li {
+    font-size: 0.9em;
+    line-height: 1.5em;
+  }
+}
+
+.tingle-modal__close {
+  font-size: 4rem;
 }
