--- a/wp-content/themes/safedescents/resources/assets/styles/pages/_homepage.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/pages/_homepage.scss
@@ -92,7 +92,7 @@
 
   .products-container {
     width: 45%;
-    margin: 0 5% 40px 0;
+    margin: 2em 5% 5em 0;
     max-width: 600px;
 
     h3 {
