editing images and small details for the checkout and home pages

--- a/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
@@ -106,4 +106,10 @@
   .wrapper {
     margin: 0 1em;
   }
+
+  // Buy Now
+  .skier-details .skier-container {
+    position: relative;
+    width: 74%;
+  }
 }
