--- a/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
@@ -80,9 +80,12 @@
     }
   }
 
-  .buynow a {
-    color: $color-white !important;
-    background: $color-black;
+  .buynow-desktop {
+    display: none !important;
+  }
+
+  .buynow-mobile {
+    display: block;
   }
 
   // Coverage Map
