fixing add skier

--- a/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
@@ -121,6 +121,11 @@
   .skier-details .skier-container {
     position: relative;
     width: 70%;
+
+    span {
+      font-size: 25px;
+      top: 5px;
+    }
   }
 
   .buynow {
