--- a/wp-content/themes/safedescents/resources/assets/styles/main.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/main.scss
@@ -6,6 +6,7 @@
 @import "common/variables";
 @import "common/global";
 @import "common/typography";
+@import "common/a11y";
 @import "components/wp-classes";
 @import "components/buttons";
 @import "components/buy-now-drawer";
