--- a/wp-content/themes/safedescents/resources/assets/styles/pages/_buynow.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/pages/_buynow.scss
@@ -213,6 +213,59 @@ ol.form-progress {
     font-weight: 500;
     color: $color-sky-blue;
   }
+
+  #stripe-elements-button {
+    max-width: 200px;
+    margin: 10px auto;
+  }
+
+  #stripe-loading {
+    font-size: 3px;
+    margin: 20px auto;
+    text-indent: -9999em;
+    width: 11em;
+    height: 11em;
+    border-radius: 50%;
+    background: linear-gradient(90deg, $color-dark-blue 10%, rgba($color-dark-blue, 0) 42%);
+    position: relative;
+    animation: loading 1.4s infinite linear;
+    transform: translateZ(0);
+
+    &::before {
+      content: '';
+      width: 50%;
+      height: 50%;
+      background: $color-dark-blue;
+      border-radius: 100% 0 0 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    &::after {
+      content: '';
+      background: $color-white;
+      width: 75%;
+      height: 75%;
+      border-radius: 50%;
+      margin: auto;
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+    }
+  }
+}
+
+@keyframes loading {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .billing-address-same {
