--- a/wp-content/themes/safedescents/resources/assets/styles/components/_coverage-map.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_coverage-map.scss
@@ -44,7 +44,11 @@
 
     .your-email input {
       width: 100%;
-      margin-bottom: 2em;
+      margin-bottom: 0;
+    }
+
+    .your-state, label[for="your-state"] {
+      display: none;
     }
   }
 }
