subbing out header image to masons request

--- a/wp-content/themes/safedescents/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/layouts/_header.scss
@@ -3,7 +3,7 @@ header {
   background-size: cover;
   height: 300px;
   text-align: center;
-  background-position: top;
+  background-position: center;
   position: relative;
 
   &::before {
