Fix season pass pull in buy-now drawer

--- a/wp-content/themes/safedescents/resources/assets/styles/components/_coverage-map.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/components/_coverage-map.scss
@@ -42,8 +42,7 @@
       line-height: 1.2em;
     }
 
-    .your-email input {
-      width: 100%;
+    .your-state input {
       margin-bottom: 0;
     }
   }
