--- a/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
+++ b/wp-content/themes/safedescents/resources/assets/styles/common/_mediaqueries.scss
@@ -106,7 +106,7 @@
 
   // Claims
   .claims-sections article {
-    margin: 0;
+    margin: 1em 0;
   }
 
   button, input, optgroup, select, textarea {
